Session management support

For session restoration we just need to remember which page we're on,
which is already supported as a command line argument.

This patch repurposes that and explicitly sets the restart command on
session save.

BUG: 438866